--- a/pages/user/exam_list.html
+++ b/pages/user/exam_list.html
@@ -186,7 +186,7 @@
         function loadExams() {
             console.log('dsadsa')
             $.ajax({
-                url: `${ROOT_API}/api/MockExams/getByUser/${userId}`,
+                url: `${ROOT_API}/api/MockExam/getByUser/${userId}`,
                 method: 'GET',
                 headers: {
                     'Authorization': 'Bearer ' + token
@@ -255,7 +255,7 @@
             };
 
             $.ajax({
-                url: `${ROOT_API}/api/MockExams/create`,
+                url: `${ROOT_API}/api/MockExam/create`,
                 method: 'POST',
                 headers: {
                     'Authorization': 'Bearer ' + token
