--- a/pages/user/exam_result.html
+++ b/pages/user/exam_result.html
@@ -160,7 +160,7 @@
         function loadExamResult() {
             // Lấy thông tin bài thi
             $.ajax({
-                url: `${ROOT_API}/api/MockExams/${examId}`,
+                url: `${ROOT_API}/api/MockExam/${examId}`,
                 method: 'GET',
                 headers: {
                     'Authorization': 'Bearer ' + token
@@ -172,7 +172,7 @@
 
                     // Lấy danh sách câu trả lời của người dùng từ bảng MockExamAnswers
                     $.ajax({
-                        url: `${ROOT_API}/api/MockExamAnswers/getByExam/${examId}`,
+                        url: `${ROOT_API}/api/MockExamAnswer/getByExam/${examId}`,
                         method: 'GET',
                         headers: {
                             'Authorization': 'Bearer ' + token
@@ -217,7 +217,7 @@
                 // Lấy chi tiết câu hỏi và đáp án
                 try {
                     const questionDetails = await $.ajax({
-                        url: `${ROOT_API}/api/Questions/getById/${questionId}`,
+                        url: `${ROOT_API}/api/Question/getById/${questionId}`,
                         method: 'GET',
                         headers: {
                             'Authorization': 'Bearer ' + token
