--- a/pages/authentication/signup.html
+++ b/pages/authentication/signup.html
@@ -240,7 +240,7 @@
 
 
     <script>
-        const ROOT_API = 'http://localhost:5170'
+        const ROOT_API = 'http://103.179.185.149:8080'
         // function register(){
         //     $('#name').val(),
         //     $('#email').val(),
