--- a/pages/authentication/login.html
+++ b/pages/authentication/login.html
@@ -207,7 +207,7 @@
     </div>
 
     <script>
-        const ROOT_API = 'http://localhost:5170';
+        const ROOT_API = 'http://103.179.185.149:8080';
 
         $(document).ready(function () {
             $('#login-form').submit(function (event) {
