--- a/pages/user/exam_question.html
+++ b/pages/user/exam_question.html
@@ -220,7 +220,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <script>
-        const ROOT_API = 'http://localhost:5170';
+        const ROOT_API = 'http://103.179.185.149:8080';
         const urlParams = new URLSearchParams(window.location.search);
         const examId = urlParams.get('examId');
         const token = localStorage.getItem('jwtToken');
