--- a/pages/user/exam_result.html
+++ b/pages/user/exam_result.html
@@ -146,7 +146,7 @@
     </div>
 
     <script>
-        const ROOT_API = 'http://localhost:5170';
+        const ROOT_API = 'http://103.179.185.149:8080';
         const token = localStorage.getItem('jwtToken');
         const urlParams = new URLSearchParams(window.location.search);
         const examId = urlParams.get('examId');
