--- a/pages/user/theory_category.html
+++ b/pages/user/theory_category.html
@@ -76,7 +76,7 @@
     </div>
 
     <script>
-        const ROOT_API = 'http://localhost:5170'
+        const ROOT_API = 'http://103.179.185.149:8080'
         var token = localStorage.getItem('jwtToken');
         $.ajax({
             url: `${ROOT_API}/api/Category/getCategoryByType/theory`,
