--- a/home.html
+++ b/home.html
@@ -4,22 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interface Design</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             display: flex;
-            flex-direction: column; /* Điều chỉnh để các phần tử nằm theo chiều dọc */
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding-top: 70px; /* Khoảng cách để tránh navbar che nội dung */
         }
 
+        /* Navbar Styles */
+        .navbar {
+            width: 100%;
+            background-color: #0288d1;
+            padding: 15px 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+
+        .navbar-brand {
+            color: white;
+            font-size: 1.5rem;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .navbar-menu {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar-menu li a, .navbar-menu li button {
+            color: white;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 8px 15px;
+            border-radius: 5px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .navbar-menu li a:hover, .navbar-menu li button:hover {
+            background-color: #01579b;
+        }
+
+        /* Main Content Styles */
         h1 {
             width: 100%;
             text-align: center;
-            margin-bottom: 30px; /* Thêm khoảng cách dưới tiêu đề */
+            margin-bottom: 30px;
         }
 
         .container {
@@ -38,7 +93,7 @@
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
             cursor: pointer;
             transition: transform 0.3s ease;
-            text-decoration: none; /* Loại bỏ gạch chân mặc định của thẻ a */
+            text-decoration: none;
         }
 
         .card:hover {
@@ -56,10 +111,25 @@
             font-size: 14px;
             color: #333;
         }
-
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="/index.html" class="navbar-brand">Ôn Thi GPLX</a>
+            <ul class="navbar-menu">
+                <li><a href="/pages/user/theory_category.html">Học Lý Thuyết</a></li>
+                <li><a href="/pages/common/traffic_sign.html">Biển Báo</a></li>
+                <li><a href="/pages/user/exam_list.html">Thi Sát Hạch</a></li>
+                <li><a href="/pages/common/tip.html">Mẹo Thi</a></li>
+                <li><a href="https://www.youtube.com/watch?v=LdCsf3tFne8">Sa Hình</a></li>
+                <li><button id="logout-btn">Đăng Xuất</button></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
     <h1>Ôn thi giấy phép xe máy</h1>
     <div class="container">
         <a href="pages/user/theory_category.html" target="_blank" class="card">
@@ -83,5 +153,30 @@
             <p>Sa hình</p>
         </a>
     </div>
+
+    <!-- Script -->
+    <script>
+        $(document).ready(function () {
+            $("#logout-btn").click(function () {
+                if (confirm("Bạn có chắc muốn đăng xuất?")) {
+                    $.ajax({
+                        url: "http://103.179.185.149:8080/api/Auth/logout", // Địa chỉ API đăng xuất
+                        method: "POST",
+                        headers: {
+                            "Authorization": "Bearer " + localStorage.getItem("jwtToken")
+                        },
+                        success: function () {
+                            localStorage.removeItem("jwtToken"); // Xóa token ở client
+                            window.location.href = "/login.html"; // Chuyển về trang đăng nhập
+                        },
+                        error: function (xhr, status, error) {
+                            console.error("Lỗi khi đăng xuất:", error);
+                            alert("Có lỗi xảy ra khi đăng xuất. Vui lòng thử lại.");
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 </html>
