--- a/pages/authentication/login.html
+++ b/pages/authentication/login.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Đăng kí</title>
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
+    <title>Học Lý Thuyết</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <style>
-        /* Reset default styles */
         * {
             margin: 0;
             padding: 0;
@@ -19,247 +14,258 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #f4f7fb 100%);
-            min-height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            padding-top: 70px; /* Khoảng cách cho navbar */
         }
 
-        /* Main container */
-        .main {
+        /* Navbar Styles */
+        .navbar {
             width: 100%;
-            padding: 20px;
+            background: #0288d1;
+            padding: 15px 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* Sign-in section */
-        .sign-in .container {
-            max-width: 900px;
+        .navbar-container {
+            max-width: 1200px;
             margin: 0 auto;
-            background: #fff;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
             display: flex;
-            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
         }
 
-        /* Sign-in content */
-        .signin-content {
-            display: flex;
-            width: 100%;
-        }
-
-        /* Sign-in image */
-        .signin-image {
-            flex: 1;
-            background: #f8f9fd;
-            padding: 40px;
-            text-align: center;
-        }
-
-        .signin-image figure {
-            margin-bottom: 20px;
-        }
-
-        .signin-image img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .signup-image-link {
-            display: inline-block;
-            margin-top: 20px;
-            color: #007bff;
+        .navbar-brand {
+            color: #fff;
+            font-size: 1.5rem;
+            font-weight: bold;
             text-decoration: none;
-            font-size: 16px;
-            font-weight: 500;
+            letter-spacing: 1px;
             transition: color 0.3s ease;
         }
 
-        .signup-image-link:hover {
-            color: #0056b3;
-            text-decoration: underline;
+        .navbar-brand:hover {
+            color: #e1f5fe;
         }
 
-        /* Sign-in form */
-        .signin-form {
-            flex: 1;
-            padding: 40px;
+        .navbar-menu {
+            list-style: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
         }
 
-        .form-title {
-            font-size: 28px;
-            color: #333;
-            margin-bottom: 30px;
-            text-align: center;
-            font-weight: 600;
-        }
-
-        /* Form group */
-        .form-group {
-            position: relative;
-            margin-bottom: 25px;
-        }
-
-        .form-group label {
-            position: absolute;
-            top: 50%;
-            left: 15px;
-            transform: translateY(-50%);
-            color: #666;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 12px 15px 12px 45px;
-            border: 1px solid #ddd;
-            border-radius: 25px;
-            font-size: 16px;
-            outline: none;
-            transition: border-color 0.3s ease;
-        }
-
-        .form-group input:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
-        }
-
-        .form-group input::placeholder {
-            color: #999;
-        }
-
-        /* Submit button */
-        .form-button .form-submit {
-            width: 100%;
-            padding: 12px;
-            background: #007bff;
-            border: none;
-            border-radius: 25px;
+        .navbar-menu li a, .navbar-menu li button {
             color: #fff;
-            font-size: 16px;
-            font-weight: 500;
+            text-decoration: none;
+            font-size: 1rem;
+            padding: 8px 15px;
+            border-radius: 20px;
+            background: none;
+            border: none;
             cursor: pointer;
-            transition: background 0.3s ease;
+            transition: all 0.3s ease;
+            font-weight: 500;
         }
 
-        .form-button .form-submit:hover {
-            background: #0056b3;
+        .navbar-menu li a:hover, .navbar-menu li button:hover {
+            background: #01579b;
         }
 
-        /* Responsive design */
+        .navbar-toggle {
+            display: none;
+            color: #fff;
+            font-size: 1.5rem;
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* Main Content Styles */
+        h1 {
+            width: 100%;
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 2rem;
+            color: #333;
+            font-weight: bold;
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 50px;
+            width: 100%;
+            max-width: 800px;
+            padding: 0 20px;
+        }
+
+        .card {
+            background-color: white;
+            border-radius: 12px;
+            padding: 20px;
+            text-align: center;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            transition: transform 0.3s ease;
+            text-decoration: none;
+        }
+
+        .card:hover {
+            transform: scale(1.1);
+        }
+
+        .card img {
+            width: 130px;
+            height: 130px;
+            margin-bottom: 10px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .card p {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #333;
+            font-weight: 500;
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
-            .signin-content {
+            .navbar-container {
+                position: relative;
+            }
+
+            .navbar-menu {
+                display: none;
                 flex-direction: column;
-            }
-
-            .signin-image,
-            .signin-form {
-                flex: none;
                 width: 100%;
+                background: #0288d1;
+                position: absolute;
+                top: 60px;
+                left: 0;
+                padding: 10px 0;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             }
 
-            .signin-image {
-                padding: 20px;
+            .navbar-menu.active {
+                display: flex;
             }
 
-            .signin-form {
-                padding: 30px 20px;
+            .navbar-menu li a, .navbar-menu li button {
+                padding: 10px 20px;
+                text-align: center;
+            }
+
+            .navbar-toggle {
+                display: block;
+            }
+
+            .container {
+                grid-template-columns: 1fr;
+                gap: 30px;
             }
         }
     </style>
 </head>
-
 <body>
-    <div class="main">
-        <section class="sign-in">
-            <div class="container">
-                <div class="signin-content">
-                    <div class="signin-image">
-                        <figure><img
-                                src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/ee89b0208079789.66e8edb37316c.jpg"
-                                alt="sign up image"></figure>
-                        <a href="signup.html" class="signup-image-link"
-                            style="font-family: Arial, Helvetica, sans-serif;">Create an account</a>
-                    </div>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="/index.html" class="navbar-brand">Ôn Thi GPLX</a>
+            <button class="navbar-toggle" onclick="$('.navbar-menu').toggleClass('active')">☰</button>
+            <ul class="navbar-menu">
+                <li><a href="/pages/user/theory_category.html">Học Lý Thuyết</a></li>
+                <li><a href="/pages/common/traffic_sign.html">Biển Báo</a></li>
+                <li><a href="/pages/user/exam_list.html">Thi Sát Hạch</a></li>
+                <li><a href="/pages/common/tip.html">Mẹo Thi</a></li>
+                <li><a href="https://www.youtube.com/watch?v=LdCsf3tFne8">Sa Hình</a></li>
+                <li><button id="logout-btn">Đăng Xuất</button></li>
+            </ul>
+        </div>
+    </nav>
 
-                    <div class="signin-form">
-                        <h2 class="form-title">Đăng nhập</h2>
-                        <form class="register-form" id="login-form">
-                            <div class="form-group">
-                                <label for="email"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="email" name="your_name" id="email" placeholder="Email" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="password" placeholder="Mật khẩu" />
-                            </div>
-                            <div class="form-group form-button">
-                                <input type="submit" name="signin" class="form-submit" value="Log in" />
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <!-- Main Content -->
+    <h1>Học lý thuyết</h1>
+    <div class="container" id="tabs">
+        <!-- Danh mục lý thuyết sẽ được thêm động -->
     </div>
 
     <script>
         const ROOT_API = 'http://103.179.185.149:8080';
+        var token = localStorage.getItem('jwtToken');
 
         $(document).ready(function () {
-            $('#login-form').submit(function (event) {
-                event.preventDefault();
-                login();
-            });
-        });
-
-        function login() {
-            let email = $('#email').val();
-            let password = $('#password').val();
-
-            if (!email || !password) {
-                alert('Email or password cannot be empty');
-                return;
-            }
-
-            const data = {
-                email: email,
-                password: password,
-            };
-
-            console.log(data)
-
+            // Load danh mục lý thuyết
             $.ajax({
-                url: ROOT_API + '/api/Authentication/login',
-                method: 'POST',
+                url: `${ROOT_API}/api/Category/getCategoryByType/theory`,
+                method: 'GET',
+                headers: {
+                    'Authorization': 'Bearer ' + token
+                },
                 contentType: "application/json",
-                data: JSON.stringify(data),
                 success: function (response) {
-                    alert('Login successful');
                     console.log(response);
 
-                    // Lưu token vào localStorage hoặc biến
-                    const token = response.token;
-                    localStorage.setItem('jwtToken', token);
+                    response.forEach(category => {
+                        const link = document.createElement('a');
+                        link.href = `theory_question.html?categoryId=${category.categoryId}`;
+                        link.target = "_blank";
+                        link.classList.add('card');
 
-                    // Giải mã token để lấy user ID
-                    const decodedToken = jwt_decode(token);
-                    const userId = decodedToken['http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier'];
-                    console.log('User ID:', userId);
+                        const img = document.createElement('img');
+                        img.src = category.imageUrl || "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT16grhJ4JRdTUCGIKKzekwFvIXvPJ-cxyP6g&s";
+                        img.alt = category.categoryName;
 
-                    window.location.href = '../../home.html';
+                        const text = document.createElement('p');
+                        text.innerText = category.categoryName;
 
+                        link.appendChild(img);
+                        link.appendChild(text);
+
+                        document.getElementById('tabs').appendChild(link);
+                    });
                 },
                 error: function (xhr, status, error) {
-                    alert('Login failed: ' + xhr.responseText);
-                    console.log(status, error);
+                    console.log(xhr.responseText);
+                    console.log(status);
+                    console.log(error);
                 }
             });
-        }
+
+            // Xử lý đăng xuất
+            $("#logout-btn").click(function () {
+                if (confirm("Bạn có chắc muốn đăng xuất?")) {
+                    $.ajax({
+                        url: `${ROOT_API}/api/Auth/logout`,
+                        method: "POST",
+                        headers: {
+                            "Authorization": "Bearer " + token
+                        },
+                        success: function () {
+                            localStorage.removeItem("jwtToken");
+                            window.location.href = "/login.html";
+                        },
+                        error: function (xhr, status, error) {
+                            console.error("Lỗi khi đăng xuất:", error);
+                            alert("Có lỗi xảy ra khi đăng xuất. Vui lòng thử lại.");
+                        }
+                    });
+                }
+            });
+        });
     </script>
 </body>
-
 </html>
