--- a/pages/user/exam_list.html
+++ b/pages/user/exam_list.html
@@ -355,21 +355,10 @@
             // Xử lý đăng xuất
             $("#logout-btn").click(function () {
                 if (confirm("Bạn có chắc muốn đăng xuất?")) {
-                    $.ajax({
-                        url: `${ROOT_API}/api/Auth/logout`,
-                        method: "POST",
-                        headers: {
-                            "Authorization": "Bearer " + token
-                        },
-                        success: function () {
-                            localStorage.removeItem("jwtToken");
-                            window.location.href = "/login.html";
-                        },
-                        error: function (xhr, status, error) {
-                            console.error("Lỗi khi đăng xuất:", error);
-                            alert("Có lỗi xảy ra khi đăng xuất. Vui lòng thử lại.");
-                        }
-                    });
+                    // Xóa token trong localStorage
+                    localStorage.removeItem("jwtToken");
+                    // Chuyển hướng về trang đăng nhập
+                    window.location.href = "pages/authentication/login.html";
                 }
             });
         });
